<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="method"
            type="com.ajstudio.briss.model.BreatheMethod" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".MainActivity">
        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="7dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/menuButtonCD"
                android:src="@drawable/ic_menu"
                app:tint="@color/foreground2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/foreground2"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_setting"
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/settingsButtonCD"
                android:src="@drawable/ic_setting"
                app:tint="@color/foreground2" />

        </LinearLayout>
        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:scaleX=".9"
            android:scaleY=".9"
            app:cpb_background_progressbar_color="@color/foreground"
            app:cpb_progress="0"
            app:cpb_progressbar_color="@color/foreground2"
            app:cpb_progressbar_width="19dp"
            app:cpb_round_border="true"
            app:layout_constraintBottom_toBottomOf="@+id/stateVisualizer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/stateVisualizer" />
        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/exhaleFinalPositionPlaceholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleX=".6"
            android:scaleY=".6"
            app:cpb_background_progressbar_color="@color/foreground2"
            app:layout_constraintBottom_toBottomOf="@+id/stateVisualizer"
            app:layout_constraintEnd_toEndOf="@+id/stateVisualizer"
            app:layout_constraintStart_toStartOf="@+id/stateVisualizer"
            app:layout_constraintTop_toTopOf="@+id/stateVisualizer"
            android:alpha="0"
            android:translationZ="60dp"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/stateVisualizer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="67dp"
            android:layout_marginBottom="120dp"
            android:alpha=".8"
            android:scaleX="1"
            android:scaleY="1"
            app:cardBackgroundColor="@color/foreground2"
            app:cardCornerRadius="999dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBar" />
<!--            <io.alterac.blurkit.BlurLayout-->
<!--                android:id="@+id/blurLayout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"/>-->
<!--        </androidx.cardview.widget.CardView>-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha=".8"
            app:cardBackgroundColor="@color/foreground"
            app:cardCornerRadius="999dp"
            app:cardElevation="50dp"
            app:layout_constraintBottom_toBottomOf="@id/stateVisualizer"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/stateVisualizer"
            app:layout_constraintStart_toStartOf="@id/stateVisualizer"
            app:layout_constraintTop_toTopOf="@id/stateVisualizer" />
        <TextView
            android:id="@+id/mainDisplayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sessionStartTip"
            android:textColor="#fff"
            android:textSize="28sp"
            android:textStyle="bold"
            android:translationZ="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/stateVisualizer"
            app:layout_constraintEnd_toEndOf="@+id/stateVisualizer"
            app:layout_constraintStart_toStartOf="@+id/stateVisualizer"
            app:layout_constraintTop_toTopOf="@+id/stateVisualizer" />
        <androidx.cardview.widget.CardView
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#fff"
            android:translationZ="50dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="9dp"
            android:paddingVertical="7dp"
            app:layout_constraintTop_toBottomOf="@id/mainDisplayText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/duration">
            <TextView
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/foreground"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 Minutes"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/holdCounterHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/stateVisualizer"
            app:layout_constraintStart_toStartOf="@+id/stateVisualizer"
            app:layout_constraintTop_toBottomOf="@+id/mainDisplayText"
            android:translationZ="50dp"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/holdTimerCounter1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/holdTimerCounter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:layout_marginHorizontal="10dp"
                android:alpha="0"/>

            <ImageView
                android:id="@+id/holdTimerCounter3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:alpha="0" />
        </LinearLayout>
        <View
            android:id="@+id/fadeOut"
            android:alpha="0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:translationZ="50dp"/>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:translationZ="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_radius"
                android:orientation="vertical"
                app:behavior_hideable="false"
                app:behavior_peekHeight="105dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <LinearLayout
                    android:id="@+id/descriptionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp">

                        <com.ajstudio.briss.tools.carouselview.CarouselView
                            android:id="@+id/carouselView"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            app:carouselOffset="center"
                            app:enableSnapping="true"
                            app:resource="@layout/layout_method_description_bottom"
                            app:scaleOnScroll="true"
                            app:setAutoPlay="false" />

                        <include
                            android:id="@+id/replaceWithName"
                            layout="@layout/layout_method_description_bottom"
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:alpha=".8"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:contentDescription="@string/contentDescription_inhale_icon"
                            android:padding="2dp"
                            android:rotation="-90"
                            android:src="@drawable/ic_arrow"
                            app:tint="@color/foreground2" />

                        <TextView
                            android:id="@+id/inhaleSeconds"
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:layout_marginHorizontal="4dp"
                            android:gravity="center"
                            android:textColor="@color/foreground2"
                            android:textSize="18sp"
                            tools:text="4" />

                        <ImageView
                            android:id="@+id/inhaleHoldIcon"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:contentDescription="@string/contentDescription_inhale_icon"
                            android:padding="2dp"
                            android:rotation="-90"
                            android:src="@drawable/ic_arrow"
                            app:tint="@color/foreground2" />

                        <TextView
                            android:id="@+id/inhaleHoldSeconds"
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:layout_marginHorizontal="4dp"
                            android:gravity="center"
                            android:textColor="@color/foreground2"
                            android:textSize="18sp"
                            tools:text="4" />

                        <ImageView
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:contentDescription="@string/contentDescription_inhale_icon"
                            android:padding="2dp"
                            android:rotation="90"
                            android:src="@drawable/ic_arrow"
                            app:tint="@color/foreground2" />

                        <TextView
                            android:id="@+id/exhaleSeconds"
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:layout_marginHorizontal="4dp"
                            android:gravity="center"
                            android:textColor="@color/foreground2"
                            android:textSize="18sp"
                            tools:text="4" />

                        <ImageView
                            android:id="@+id/exhaleHoldIcon"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:contentDescription="@string/contentDescription_inhale_icon"
                            android:padding="2dp"
                            android:rotation="-90"
                            android:src="@drawable/ic_arrow"
                            app:tint="@color/foreground2" />

                        <TextView
                            android:id="@+id/exhaleHoldSeconds"
                            android:layout_width="wrap_content"
                            android:layout_height="25sp"
                            android:layout_marginHorizontal="4dp"
                            android:gravity="center"
                            android:textColor="@color/foreground2"
                            android:textSize="18sp"
                            tools:text="4" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/descriptionHeader"
                    android:layout_marginHorizontal="14dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/descriptionSubtitle"
                        android:layout_marginVertical="5dp"
                        android:text="@{method.description}"
                        tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usage"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/descriptionSubtitle"
                        android:layout_marginVertical="5dp"
                        android:text="@{method.usage}"
                        tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suggestion"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/descriptionSubtitle"
                        android:layout_marginVertical="5dp"
                        android:text="@{method.suggestion}"
                        tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/benefit"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/descriptionSubtitle"
                        android:layout_marginVertical="5dp"
                        android:text="@{method.benefits}"
                        tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At" />
                </LinearLayout>
            </RelativeLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>